Fix layout issues on statistic page on large screens

--- a/client/src/app/Pages/statistics/statistics.component.scss
+++ b/client/src/app/Pages/statistics/statistics.component.scss
@@ -1,10 +1,24 @@
 :host {
   display: flex;
   flex-direction: column;
+  align-items: center; /* Zentriert den gesamten Inhalt des Hosts */
+  padding-bottom: 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
   gap: 3.5rem;
-  padding-bottom: 2rem;
+  justify-content: center;
+  max-width: 1800px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 app-multi-select {
-  margin-bottom: -20px;
+  margin-bottom: -1.5rem;
+}
+
+footer {
+  margin-top: 1.5rem;
 }
